Moving from `index` to `home`

--- a/apps/astraplusplus/widget/index.jsonc
+++ b/apps/astraplusplus/widget/index.jsonc
@@ -1,11 +1,4 @@
 /*__@noStringify__*/
 {
-  "metadata": {
-    "name": "Astra++ - Under Construction",
-    "description": "",
-    "image": {},
-    "tags": {
-      "app": ""
-    }
-  }
+  "metadata": null
 }
