--- a/apps/astraplusplus/widget/home.jsonc
+++ b/apps/astraplusplus/widget/home.jsonc
@@ -1,7 +1,7 @@
 /*__@noStringify__*/
 {
   "metadata": {
-    "name": "Astra++",
+    "name": "Astra++ (under development)",
     "description": "",
     "image": {
       "ipfs_cid": "bafkreidmuwft6jc52qu6srew7scvvbirkir4cljq6ogta6kelnjs3rvimq"
