--- a/apps/astraplusplus/widget/index.jsonc
+++ b/apps/astraplusplus/widget/index.jsonc
@@ -1,4 +1,11 @@
 /*__@noStringify__*/
 {
-  "metadata": null
+  "metadata": {
+    "name": "",
+    "description": "",
+    "image": {},
+    "tags": {
+      "app": null
+    }
+  }
 }
