--- a/apps/astraplusplus/bos.config.json
+++ b/apps/astraplusplus/bos.config.json
@@ -3,9 +3,9 @@
     "aliases": {
         "nui": "nearui.near",
         "pikespeakApiKey": "36f2b87a-7ee6-40d8-80b9-5e68e587a5b5",
-        "HoMDaoId": "congress-test.testnet",
+        "HoMDaoId": "hom.gwg-testing.near",
         "VotingBodyDaoId": "",
-        "TCDaoId": "",
-        "CoADaoId": ""
+        "TCDaoId": "tc.gwg-testing.near",
+        "CoADaoId": "coa.gwg-testing.near"
     }
 }
