--- a/apps/astraplusplus/bos.config.json
+++ b/apps/astraplusplus/bos.config.json
@@ -4,8 +4,12 @@
         "nui": "nearui.near",
         "pikespeakApiKey": "36f2b87a-7ee6-40d8-80b9-5e68e587a5b5",
         "HoMDaoId": "congress-hom-v1.ndc-gwg.near",
-        "VotingBodyDaoId": "",
         "TCDaoId": "congress-tc-v1.ndc-gwg.near",
-        "CoADaoId": "congress-coa-v1.ndc-gwg.near"
+        "CoADaoId": "congress-coa-v1.ndc-gwg.near",
+        "VotingBodyDaoId": "",
+        "HoMDaoIdTesting": "hom.gwg-testing.near",
+        "TCDaoIdTesting": "tc.gwg-testing.near",
+        "CoADaoIdTesting": "coa.gwg-testing.near",
+        "VotingBodyDaoIdTesting": ""
     }
 }
