--- a/apps/astraplusplus/bos.config.json
+++ b/apps/astraplusplus/bos.config.json
@@ -3,6 +3,7 @@
     "aliases": {
         "nui": "nearui.near",
         "pikespeakApiKey": "36f2b87a-7ee6-40d8-80b9-5e68e587a5b5",
+        "astrodaoApiKey": "LzOQDSCBMAeuNO7vDwIvP",
         "RegistryId": "registry.i-am-human.near",
         "RegistryIdTesting": "registry-v1.gwg-testing.near",
         "HoMDaoId": "congress-hom-v1.ndc-gwg.near",
